# VectorLib

./: .gitattributes  .gitignore  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/: dependabot.yml
.github/logo/: VecPosLib-logo.svgz
.github/workflows/: actionlint.yml  dependency-review.yml  pylint.yml  pypi-publish.yml
package/: __init__.py
package/positionlib/: __init__.py  position.py  position.pyi
package/vecposlib/: __init__.py  common.py
package/vecposlib/positionlib/: __init__.py  position.py  position.pyi
package/vecposlib/vectorlib/: __init__.py  vector.py  vector.pyi
package/vectorlib/: __init__.py  vector.py  vector.pyi
tests/: test_position.py  test_position_advanced_benchmark.py  test_position_benchmark.py  test_position_perf.py  test_vector.py  test_vector3d_draw.py  test_vector_benchmark.py  test_vector_draw.py  test_vector_draw3d.py
